--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+﻿<!DOCTYPE html>
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>jquery+html5烂漫爱心表白动画 - 站长素材</title>
+<title>记忆大学时光</title>
 
 <style type="text/css">
 @font-face {
@@ -24,42 +24,45 @@
 	<div id="content">
 		<div id="code">
 			<span class="comments">/**</span><br />
-			<span class="space"/><span class="comments">*2013—02-14,</span><br />
-			<span class="space"/><span class="comments">*2013-02-28.</span><br />
+			<span class="space"/><span class="comments">*2008-09-01,</span><br />
+			<span class="space"/><span class="comments">*2012-06-28.</span><br />
 			<span class="space"/><span class="comments">*/</span><br />
-			Boy name = <span class="keyword">Mr</span> LI<br />
-			Girl name = <span class="keyword">Mrs</span> ZHANG<br />
-			<span class="comments">// Fall in love river. </span><br />
-			The boy love the girl;<br />
-			<span class="comments">// They love each other.</span><br />
-			The girl loved the boy;<br />
+			Boy_1 name = <span class="keyword">Mr</span> FU<br />
+			Boy_2 name = <span class="keyword">Mr</span> YOU<br />
+                        Boy_3 name = <span class="keyword">Mr</span> QIN<br /> 
+                        Boy_4 name = <span class="keyword">Mr</span> PANG<br />
+                        Girl name = <span class="keyword">Mr</span> XIONG<br />
+			<span class="comments">// The Girl should be Boy_5. </span><br />
+			They are brothers;<br />
+			<span class="comments">// They love each other. - -!</span><br />
+			They love Wow,Dota etc. and play together;<br />
 			<span class="comments">// AS time goes on.</span><br />
-			The boy can not be separated the girl;<br />
+			They grow up;<br />
 			<span class="comments">// At the same time.</span><br />
-			The girl can not be separated the boy;<br />
-			<span class="comments">// Both wind and snow all over the sky.</span><br />
-			<span class="comments">// Whether on foot or 5 kilometers.</span><br />
-			<span class="keyword">The boy</span> very <span class="keyword">happy</span>;<br />
-			<span class="keyword">The girl</span> is also very <span class="keyword">happy</span>;<br />
+			The team have more peoples;<br />
+			<span class="comments">// Both boys and girls be a whole happy family.</span><br />
+			<span class="comments">// The family calls 长理信计No1.</span><br />
+			<span class="keyword">The boys</span> very <span class="keyword">happy</span>;<br />
+			<span class="keyword">The girls</span> is also very <span class="keyword">happy</span>;<br />
 			<span class="placeholder"/><span class="comments">// Whether it is right now</span><br />
 			<span class="placeholder"/><span class="comments">// Still in the distant future.</span><br />
-			<span class="placeholder"/>The boy has but one dream;<br />
-			<span class="comments">// The boy wants the girl could well have been happy.</span><br />
+			<span class="placeholder"/>They have but one dream;<br />
+			<span class="comments">// Don't forget each other could well have been happy.</span><br />
 			<br>
 			<br>
 			I want to say:<br />
-			Baby, I love you forever;<br />
+			We are 伐木类;<br />
 		</div>
 		<div id="loveHeart">
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					亲爱的，这是我们相爱在一起的时光。
+					时光匆匆，我们毕业之后的时光。
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
-					爱你直到永永远远。<br/>
-					<div class="signature">- 李先生</div>
+					兄弟直到永永远远。<br/>
+					<div class="signature">- Freeruzy</div>
 				</div>
 			</div>
 		</div>
@@ -67,9 +70,10 @@
 </div>
 
 <script type="text/javascript">
-﻿
+var offsetX = $("#loveHeart").width() / 2;
+var offsetY = $("#loveHeart").height() / 2 - 55;
 var together = new Date();
-together.setFullYear(2013, 2, 28);
+together.setFullYear(2012, 6, 28);
 together.setHours(20);
 together.setMinutes(0);
 together.setSeconds(0);
@@ -99,8 +103,7 @@ if (!document.createElement('canvas').getContext) {
 }
 </script>
 <div style="text-align:center;clear:both">
-<p>适用浏览器：360、FireFox、Chrome、Safari、Opera、傲游、搜狗、世界之窗. 不支持IE8及以下浏览器。</p>
-<p>来源：<a href="http://sc.chinaz.com/" target="_blank">站长素材</a></p>
+
 </div>
 </body>
 </html>
