--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<br>
 			<br>
 			I want to say:<br />
-			We are 伐木类;<br />
+			We are 伐木类!<br />
 		</div>
 		<div id="loveHeart">
 			<canvas id="garden"></canvas>
