--- a/index.html
+++ b/index.html
@@ -107,17 +107,16 @@ function dblEvent(e) {
 } 
 
 var timeout = undefined;
-var obj = document.getElementsByClassName('touch');
-for (var i = 0; i < obj.length; i++) {
-    obj[i].addEventListener('touchstart', function(event) {  
+var obj = document.getElementsByClassName('loveu');
+    obj.addEventListener('touchstart', function(event) {  
            timeout = setTimeout(function() {
            $('#loveu').html("Yu Love Xian Forever!");
         }, 1500);
     }, false);
-    obj[i].addEventListener('touchend', function(event) {//  
+    obj.addEventListener('touchend', function(event) {//  
         clearTimeout(timeout);
     }, false);
-}
+
 </script>
 <div style="text-align:center;clear:both">
 
